--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ __pycache__/
 media/
 .vscode/
 docker/
-.DS_Store
-static/*.png
 local_settings.py
+private_settings.py
+static/*.png
+.DS_Store
+.gitignore
