gitignoreファイルの修正

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,14 @@
 *.pyc
 *.pdf
 *.ico
+*.png
 *.sqlite3
+.DS_Store
 Dockerfile
 docker-compose.yml
 local_docker-compose.yml
+local_settings.py
+private_settings.py
 __pycache__/
 media/
 .vscode/
-local_settings.py
-private_settings.py
-static/*.png
-.DS_Store
