--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,6 +1,8 @@
-django==5.1.7
-gunicorn==22.0.0
-Markdown==3.7
+# common
+Django==5.2
+gunicorn==23.0.0
+Markdown==3.8
+# special
 django-cleanup==9.0.0
 user_agents==2.2.0
-pypdf==5.3.1
+pypdf==5.4.0
