--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -5,6 +5,8 @@ Markdown==3.8
 user_agents==2.2.0
 # special
 django-cleanup==9.0.0
+# for pypdf
+cryptography==44.0.2
 pypdf==5.4.0
 weasyprint==65.1
 # django-debug-toolbar==4.4.6
