DBバックアップ処理でエラー処理を追加見直し

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,27 @@
-*.log
-*.pot
+
+# キャッシュ関係
 *.pyc
-*.pdf
-*.ico
-*.png
-*.sqlite3
-.DS_Store
-.env
-local_compose.yml
-local_settings.py
 __pycache__/
-media/
+
+# ログ関係
+*.log
+logs/
+
+# ローカルファイル関係
+.DS_Store
 .vscode/
 tags
+
+# 機密関係
+.env
+local_settings.py
+local_compose.yml
+*.sqlite3
+
+# メディアファイルは巨大なためrsyncでバックアップする
+media/
+media/*.pdf
+
+# 国際化は考慮しない
+*.pot
 
