Dockerfileをシンプルに戻した

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
     # 相対パスでDockerfileのpathを指定。
     build:
       context: ./
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     # image名:タグ
     image: warehouse
     # container名
@@ -20,5 +20,3 @@ services:
     ports:
       - "8100:8100"
     command: python3 manage.py runserver 0.0.0.0:8100
-
-
