--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     # 相対パスでDockerfileのpathを指定。
     build:
       context: ./
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
     # image名
     image: warehouse
-    # 起動ユーザを指定する。ホストでGIDが設定されていない場合、.envファイルで[UID、GIDを設定すること]
-    user: "${UID}:${GID}"
     # container名
     container_name: warehouse
+    # 起動ユーザを指定する。ホストでGIDが設定されていない場合、.envファイルで[UID、GIDを設定すること]
+    user: "${UID}:${GID}"
     restart: always
     # ホスト上のwh2/ディレクトリをcode/としてコンテナにマウントする。
     volumes:
@@ -19,12 +19,13 @@ services:
     # 環境変数TZを設定。
     environment:
       TZ: "Asia/Tokyo"
-    # 本番環境
-    # コンテナネットワークだけにポートを公開する場合はexposeするだけ。
+    # 本番環境で、コンテナネットワークだけにポートを公開する場合はexposeするだけ。
     expose:
       - "8100"
-    command: /usr/local/bin/gunicorn warehouse.wsgi:application -w 2 -b :8100
-    #
+    # command: /usr/local/bin/gunicorn warehouse.wsgi:application -w 2 -b :8100
+    command: /usr/local/bin/gunicorn warehouse.wsgi:application --workers 1 --threads 4 --bind :8100
+
+    # コンテナを外部ネットワークに接続する。
     networks:
       - sophiag-network
 
