mycss.css,base.htmlの見直し

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -9,7 +9,7 @@ services:
     image: warehouse
     # container名
     container_name: warehouse
-    restart: always
+    restart: unless-stopped
     # ホスト上のcalendar/ディレクトリをcode/としてコンテナにマウントする。
     volumes:
       - ../:/code
