--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,26 +6,41 @@ FROM python:3.13-slim
 # 1. 環境変数の設定
 # stdoutへの出力をバッファリングさせない。(errorやlogを直ちに出力して欲しいから)
 ENV PYTHONUNBUFFERED=1
-# Permission deniedのエラーが出る場合、下記を有効にしてみる。
-# RUN mkdir /code && chown -R ${UID}:${GID} /code
-# /code/ディレクトリを作業用ディレクトリにする。
-WORKDIR /code
 
-# 2. システムライブラリのインストール
+# 2. dockerコンテナのユーザ作成
+ARG UID=1001
+ARG GID=1001
+
+# 3. システムライブラリのインストール（root権限が必要）
 # build-essential（コンパイル用）とフォントをまとめてインストール
+# pdf作成処理がある場合（WeasyPrintを使う）はnotoフォントをインストールする
 RUN apt-get update && apt-get install -y \
     build-essential \
-    fonts-noto-cjk \
+    # fonts-noto-cjk \
     && rm -rf /var/lib/apt/lists/*
 
-# 3. Pythonライブラリのインストール
+# 4. ユーザ作成
+RUN groupadd -g ${GID} appuser \
+    && useradd -m -u ${UID} -g ${GID} appuser
+
+# 5. /code/ディレクトリを作業用ディレクトリにする。
+WORKDIR /code
+
+# 6. Pythonライブラリのインストール
 # 先にrequirementsだけコピーすると、コードを書き換えてもキャッシュが効いて高速です
-COPY requirements /code/requirements
+COPY docker/requirements /code/requirements
 RUN pip install --upgrade pip \
     && pip install --no-cache-dir -r requirements/prod.txt
 
-# # 4. アプリケーションコードのコピー
-# ホスト上のdjangoアプリ、データベースファイルなどを/code/ディレクトリにコピーする。
-# しかしCOPYコマンドでは、親ディテクトリはコピーできないので、docker-composeでmountする。
-# または、Dockerfileを親ディレクトリと同じ階層に配置して、djangoソースをコンテナ内にコピーする。
-# COPY . /code/
+# 7. アプリケーションコードのコピー
+# ホスト上の「django関連ファイル」を作業用ディレクトリ/code/にコピーする。
+# データベースファイル、mediaなどは.djangoignoreで除外すること
+# 注意することは、
+# COPYコマンドでは、親ディテクトリはコピーできないので、compose.ymlのcontextをソース階層にする。
+COPY . /code/
+
+# 7. /codeの所有者をrootからappuserに変更する。
+RUN chown -R ${UID}:${GID} /code
+
+# 8. 最後にユーザの切り替え（COPYの後に切り替える)
+USER appuser
