compose.ymlで環境変数「APP_ENV」を追加

--- a/docker/compose_dev.yml
+++ b/docker/compose_dev.yml
@@ -31,9 +31,10 @@ services:
     # volumes:
     #   - ../:/code
 
-    # 環境変数TZを設定。
+    # 環境変数を設定。
     environment:
       TZ: "Asia/Tokyo"
+      APP_ENV: "development"
 
     # ローカル環境ではportをオープンする。
     ports:
