--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -34,6 +34,7 @@ services:
     # 環境変数TZを設定。
     environment:
       TZ: "Asia/Tokyo"
+      APP_ENV: "product"
 
     # 本番環境で、コンテナネットワークだけにポートを公開する場合はexposeするだけ。
     expose:
