--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -23,8 +23,7 @@ services:
     # （/codeはDockerfileでWORKDIRとしている）
     # ホスト上のwh2.sqlite3、media/を/code/にマウントする。
     volumes:
-      # - ../static:/code/static
-      - ./static:/code/static
+      - ../static:/code/static
       - ../wh2.sqlite3:/code/wh2.sqlite3
       - ../media:/code/media
 
